--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,8 +4,8 @@ spring:
         driverClassName: com.mysql.jdbc.Driver
         druid:
             first:
-                url: jdbc:mysql://localhost:3306/renren_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-                username: renren
+                url: jdbc:mysql://123.206.53.143:3306/pet?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+                username: root
                 password: 123456
                 initial-size: 10
                 max-active: 100
@@ -58,7 +58,7 @@ spring:
                 #login-password: admin
 server:
     ssl:
-        key-store: classpath:pet.chongai.site.pfx
-        key-store-password: 798Rgwz8
-        key-store-type: PKCS12
+        key-store: classpath:www.hotnews.net.cn.jks
+        key-store-password: xukaka
+        key-store-type: JKS
     port: 443
